--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -130,11 +130,11 @@
                     </a>
                 </div>
             </nav>
-            <div id="slide-out" class="side-nav  fixed red darken-2" style="transform: translateX(100%);">
+            <div id="slide-out" class="side-nav  fixed red darken-2" style="transform: translateX(-100%);">
                 <ul class="custom-scrollbar list-unstyled">
                     <!-- Logo -->
                     <li class="logo-sn waves-effect">
-                        <div class=" text-center">
+                        <div class="text-center">
                             <a href="#" class="pl-0">
                                 <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" class="">
                             </a>
@@ -764,12 +764,15 @@
 
     <script src="~/HomeAsset/js/jquery-3.2.1.js"></script>
     @*<script src="~/HomeAsset/js/jquery-3.2.1.min.js"></script>*@
-    <script src="~/HomeAsset/js/popper.min.js"></script>
+    @*<script src="~/HomeAsset/js/popper.min.js"></script>
     <script src="~/HomeAsset/js/bootstrap.js"></script>
     <script src="~/HomeAsset/js/mdb.js"></script>
     <script src="~/HomeAsset/js/ResizeSensor.js"></script>
-    <script src="~/HomeAsset/js/theia-sticky-sidebar.js"></script>
-
+    <script src="~/HomeAsset/js/theia-sticky-sidebar.js"></script>*@
+    <script src="~/AdminAsset/js/jquery-3.2.1.min.js"></script>
+    <script src="~/AdminAsset/js/popper.min.js"></script>
+    <script src="~/AdminAsset/js/bootstrap.min.js"></script>
+    <script src="~/AdminAsset/js/mdb.min.js"></script>
     <script src="~/HomeAsset/js/Myscript.js"></script>
     <script>
         $(function () {
